# orbslam3-tello-drone

./: .gitignore  LICENSE  README.md  build.sh
install/: local_setup.sh  setup.sh
log/: latest_build
src/: tf2_geometry_msgs.hpp
src/drone_info_gui/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/drone_info_gui/drone_info_gui/: drone_info_gui.py
src/drone_info_gui/launch/: drone_info_gui_launch.py
src/drone_info_gui/src/: drone_info_gui_node.cpp  drone_info_gui_node.hpp
src/drone_mission/: README.md  package.xml  setup.cfg  setup.py
src/drone_mission/drone_mission/: drone_mission_node.py
src/imu/: CMakeLists.txt  package.xml
src/imu/launch/: imu_launch.py
src/imu/src/: imu_node.cpp  imu_node.hpp
src/imu_odometry/: CMakeLists.txt  package.xml
src/imu_odometry/src/: imu_odometry_node.cpp  imu_odometry_node.hpp
src/imu_publisher/: CMakeLists.txt  package.xml
src/imu_publisher/launch/: imu_publisher_launch.py
src/imu_publisher/src/: imu_publisher_node.cpp  imu_publisher_node.hpp
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/mapping_and_planning/: CMakeLists.txt  package.xml
src/occupancy_grid_plotter/: package.xml  setup.cfg  setup.py
src/occupancy_grid_plotter/occupancy_grid_plotter/: occupancy_grid_plotter_node.py
src/orb_slam_ros2/: CMakeLists.txt  package.xml
src/orbslam3_odometry/: CMakeLists.txt  package.xml
src/orbslam3_odometry/config/: orbslam3_odometry.yaml  tello_camera.yaml
src/orbslam3_odometry/src/: main_node.cpp
src/path_planner/: package.xml  setup.py
src/path_planner/path_planner/: a_star_planner_node.py
src/ros2_shared/: CMakeLists.txt  package.xml
src/sensor_fusion/: README.md  package.xml  setup.py
src/sensor_fusion/sensor_fusion/: kf.py  sensor_fusion_node.py
src/tello_driver/: CMakeLists.txt
src/tello_driver/include/: tello_driver_node.hpp
src/tello_driver/src/: command_socket.cpp  state_socket.cpp  tello_driver_node.cpp  (+2 more)
src/tello_msgs/: CMakeLists.txt
teleop/: battery.sh  land.sh  takeoff.sh
utils/: draw_trajectory.py
(+29 files in other folders)
